kubernetes/apps/ai/ollama/app/ciliumnetworkpolicy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ai
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: self-hosted
            app.kubernetes.io/name: paperless
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - toEntities:
        - world
